Closed
Bug 220741
Opened 22 years ago
Closed 22 years ago
[FIX]nsBlockFrame::CombineRects seems redundant
Categories
(Core :: Layout, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.6alpha
People
(Reporter: bzbarsky, Assigned: bzbarsky)
Details
Attachments
(2 files)
|
5.17 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
|
422 bytes,
text/html
|
Details |
This function can be replaced by UnionRect, unless we expect to be combining
rects with negative widths and depend on them being combined "sanely"...
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Comment 2•22 years ago
|
||
Comment on attachment 132388 [details] [diff] [review]
Like this
I did some browsing, and didn't hit any pages where the width is negative for
those rects.... could that ever happen?
Attachment #132388 -
Flags: superreview?(dbaron)
Attachment #132388 -
Flags: review?(dbaron)
| Assignee | ||
Updated•22 years ago
|
Priority: -- → P2
Summary: nsBlockFrame::CombineRects seems redundant → [FIX]nsBlockFrame::CombineRects seems redundant
Target Milestone: --- → mozilla1.6alpha
Comment on attachment 132388 [details] [diff] [review]
Like this
I think the only possible issue here is the case of blocks with a width or
height of zero not affecting combined area (i.e., overflow area) anymore. I
wish nsRect didn't have the whole IsEmpty hack...
Attachment #132388 -
Flags: superreview?(dbaron)
Attachment #132388 -
Flags: superreview+
Attachment #132388 -
Flags: review?(dbaron)
Attachment #132388 -
Flags: review+
| Assignee | ||
Comment 4•22 years ago
|
||
Testcase is not regressed by this patch (I tested standards mode too)
| Assignee | ||
Comment 5•22 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: Misc Code → Layout
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•