Use UnionRect instead of reimplementing it in the block code. Bug 220741, r+sr=dbaron